--- a/bat_test/App.config
+++ b/bat_test/App.config
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+	<configSections>
+	</configSections>
+	<connectionStrings>
+		<add name="practice1.Properties.Settings.practice_2ConnectionString"
+            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\practice_2.mdb"
+            providerName="System.Data.OleDb" />
+	</connectionStrings>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+	</startup>
+	<appSettings>
+		<add key="COMPORT" value="COM3"/>
+	</appSettings>
 </configuration>
